--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Projeto Rocketseat",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev src/server.ts"
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex  --knexfile knexfile.ts seed:run"
   },
   "repository": {
     "type": "git",
@@ -20,6 +22,8 @@
   "dependencies": {
     "@types/express": "^4.17.6",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "sqlite3": "^4.2.0",
     "ts-node": "^8.10.2"
   },
   "devDependencies": {
