--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "expo-constants": "~9.0.0"
+    "expo-constants": "~9.0.0",
+    "react-native-svg": "11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
